fixed height and overflow auto for card content

--- a/content/_assets/styles/components/quire-contents-list.scss
+++ b/content/_assets/styles/components/quire-contents-list.scss
@@ -552,6 +552,8 @@
       .card.image {
         font-size: 1rem;
         .card-content {
+          height: 110px;
+          overflow-y: auto;
           font-size: 1.125em;
           padding: 1.5em;
         }
